# GSP-RL

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  convergence-tests.yml  unit-tests.yml
docs/: algorithms.md  architecture.md  class-graph.md  configuration.md  data-flow.md
docs/modules/: actors.md  buffers.md  networks.md  utility.md
examples/: number_prediction.py
examples/baselines/: __init__.py  cart_pole.py  cart_pole_config.yml  lunar_lander.py  lunar_lander_config.yml  pendulum.py  pendulum_config.yml
examples/network_examples/: lstm_example.py  lstm_notebook.ipynb
gsp_rl/: agent.py  main.py  sample_config.yml
src/buffers/: __init__.py  replay.py  sequential.py
src/networks/: __init__.py  ddpg.py  ddqn.py  dqn.py  lstm.py  td3.py
tests/: conftest.py  test_rddpg_vectorized.py
tests/test_actor/: test_batch_choose_action.py  test_build_models.py  test_gsp_direct_mse.py  test_gsp_loss_exposure.py  test_pipes_choose_action.py  test_pipes_learn.py
tests/test_buffers/: test_attention_buffer.py  test_replay_buffer.py  test_sequence_buffer.py  test_sequence_buffer_hidden.py
tests/test_checkpoint/: test_save_load.py
tests/test_convergence/: conftest.py  test_cartpole.py  test_pendulum.py
tests/test_device/: test_device_detection.py
tests/test_learning_aids/: config.yml  test_base_choose_action.py  test_base_learn.py  test_make_networks.py  test_td3_correctness.py  test_update_network_parameters.py
tests/test_network_input_outputs/: test_DDPG_input_output.py  test_DDQN_input_output.py  test_DQN_input_output.py  test_GSP-Attention_input_output.py  test_GSP-DDPG_input_output.py  test_TD3_input_output.py  (+4 more)
(+17 files in other folders)
