[tool.poetry]
name = "gsp-rl"
version = "0.0.1"
description = "initial packaging of rl and gsp"
authors = ["jdbloom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"
torch = "^2.1.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
SciPy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
