[tool.poetry]
name = "gsp-rl"
version = "0.0.1"
description = "initial packaging of rl and gsp"
authors = ["jdbloom"]
readme = "README.md"
packages = [{include = "gsp_rl"}]

[tool.poetry.dependencies]
python = "3.10.2"
torch = "^2.1.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
SciPy = "^1.11.4"
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
zmq = "^0.0.0"
gymnasium = "^0.29.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
